<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eight">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/Page_8"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#D8CAFF"
        android:clipToOutline="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="16dp"
        tools:targetApi="s">


        <TextView
            android:id="@+id/tod"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="104dp"
            android:text="@string/today_s_goals"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#26238C"
            app:drawableLeftCompat="@drawable/ic_glitters"
            app:drawableRightCompat="@drawable/ic_tick" />

        <TextView
            android:layout_width="194dp"
            android:layout_height="91dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="129dp"
            android:layout_marginBottom="468dp"
            android:text="@string/today_may_15"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#F699CD"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_emoji" />

        <TextView
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="159dp"
            android:layout_marginEnd="137dp"
            android:layout_marginBottom="509dp"
            android:text="@string/meh_9_31am"
            android:textColor="#000000" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="264dp"
            android:layout_marginBottom="398dp"
            android:text="@string/family"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_baseline_fam" />

        <TextView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="71dp"
            android:layout_marginBottom="398dp"
            android:text="@string/movies_and_tv"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_tv" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="246dp"
            android:layout_marginBottom="350dp"
            android:text="@string/bad_sleep"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_bed" />

        <TextView
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="94dp"
            android:layout_marginBottom="261dp"
            android:text="@string/cleaning"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_clean" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="241dp"
            android:layout_marginBottom="260dp"
            android:text="@string/meditation"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_medicine" />

        <TextView
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="306dp"
            android:text="@string/drink_water"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_water" />

        <TextView
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="243dp"
            android:layout_marginBottom="304dp"
            android:text="@string/homemade"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_home" />

        <TextView
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="350dp"
            android:text="@string/fast_food"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            app:drawableLeftCompat="@drawable/ic_food" />

        <TextView
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="186dp"
            android:text="@string/message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#2C4271" />

        <TextView
            android:layout_width="74dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="181dp"
            android:layout_marginBottom="133dp"
            app:drawableStartCompat="@drawable/ic_surf" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="40dp"
            android:background="@layout/round"
            android:drawableStart="@drawable/ic_add"
            android:gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>