<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".three">
    <RelativeLayout
        android:id="@+id/Page_3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#D8CAFF"
        android:clipToOutline="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-76dp"
        tools:targetApi="s">

        <TextView
            android:id="@+id/how_often_d"
            android:layout_width="295dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="29dp"
            android:layout_marginTop="233dp"
            android:gravity="top"
            android:text="@string/how_often_d"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/netn"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="317dp"
            android:background="#84BDF1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/never" />

        <Button
            android:id="@+id/rectangle_7"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="132dp"
            android:layout_marginTop="398dp"
            android:background="#84BDF1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/often" />

        <Button
            android:id="@+id/some"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="473dp"
            android:background="#84BDF1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/sometimes" />

        <ImageView
            android:layout_width="209dp"
            android:layout_height="160dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="112dp"
            android:src="@drawable/page_3"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button2"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="94dp"
            android:layout_marginTop="571dp"
            android:background="#26238C"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>