<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".five">
    <RelativeLayout
        android:id="@+id/Page_5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#D8CAFF"
        android:clipToOutline="true"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-76dp"
        tools:targetApi="s">


        <TextView
            android:id="@+id/options"
            android:layout_width="295dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="269dp"
            android:gravity="top"
            android:text="@string/do_u_have_any_care_options"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/yes"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="118dp"
            android:layout_marginTop="355dp"
            android:background="#84BDF1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/yes" />

        <Button
            android:id="@+id/no"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="115dp"
            android:layout_marginTop="474dp"
            android:background="#84BDF1"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/no" />

        <ImageView
            android:layout_width="219dp"
            android:layout_height="179dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="110dp"
            android:src="@drawable/page_5"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button2"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="87dp"
            android:layout_marginTop="571dp"
            android:background="#26238C"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>